# sample-nash

./: ProjectHome.md  TODO  sample-nash.cabal
Data/GameTheory/: Iterators.hs  Main.hs  NashError.hs  Nfg.hs  Solver2p.hs  SolverNp.hs  Utils.hs
example-games/: BadGame1.game  BadGame2.game  ThreePlayers.game
trunk/: DEVELOPMENT  LICENCE  README  sample-nash.cabal
trunk/Data/GameTheory/: DotNfgParser.hs  LpSolver.hs
trunk/Test/: Main.hs  TestGames.hs  TestUtils.hs
trunk/example-games/: MatchingPennies.game  RandomGame-2-300-001.game  RandomGame-6-5-002.game
